Table users {
  id uuid [pk]

  name varchar
  email varchar [unique]
  password varchar

  role enum(
    'admin',
    'student'
  )

  status enum(
    'pending',
    'active',
    'inactive',
    'suspended'
  )

  created_at timestamp
  updated_at timestamp
}

Table student_profiles {
  id uuid [pk]

  user_id uuid [ref: > users.id, unique]

  cpf varchar [unique]
  birth_date date

  phone varchar
  responsible_phone varchar

  address varchar
  district varchar
  city varchar
  zip_code varchar

  emergency_contact varchar

  belt varchar

  training_modality varchar

  has_previous_martial_art boolean [default: false]
  previous_martial_art varchar

  goal enum(
    'fitness',
    'competition',
    'self_defense',
    'leisure',
    'other'
  )

  goal_description text

  created_at timestamp
  updated_at timestamp
}

Table medical_records {
  id uuid [pk]

  student_profile_id uuid [ref: > student_profiles.id, unique]

  has_disease boolean [default: false]
  disease_description text

  uses_medication boolean [default: false]
  medication_description text

  has_physical_limitation boolean [default: false]
  physical_limitation_description text

  has_allergy boolean [default: false]
  allergy_description text

  has_previous_injury boolean [default: false]
  previous_injury_description text

  created_at timestamp
  updated_at timestamp
}

Table guardians {
  id uuid [pk]

  student_profile_id uuid [ref: > student_profiles.id]

  name varchar

  cpf varchar

  phone varchar

  signature_url varchar

  created_at timestamp
  updated_at timestamp
}

Table belt_history {
  id uuid [pk]

  student_profile_id uuid [ref: > student_profiles.id]

  belt varchar

  graduation_date date

  notes text

  created_at timestamp
}

Table enrollments {
  id uuid [pk]

  student_id uuid [ref: > student_profiles.id]

  enrollment_number varchar [unique]

  status enum(
    'pending',
    'active',
    'cancelled',
    'finished'
  )

  registration_date date
  start_date date
  end_date date

  notes text

  created_at timestamp
  updated_at timestamp
}

Table classes {
  id uuid [pk]

  instructor_id uuid [ref: > users.id]

  name varchar
  description text

  schedule varchar

  created_at timestamp
  updated_at timestamp
}

Table student_classes {
  id uuid [pk]

  enrollment_id uuid [ref: > enrollments.id]
  class_id uuid [ref: > classes.id]

  created_at timestamp
  updated_at timestamp

  indexes {
    (enrollment_id, class_id) [unique]
  }
}

Table attendance {
  id uuid [pk]

  enrollment_id uuid [ref: > enrollments.id]

  class_id uuid [ref: > classes.id]

  attendance_date date

  present boolean [default: true]

  created_at timestamp
  updated_at timestamp

  indexes {
    (enrollment_id, class_id, attendance_date) [unique]
  }
}

Table payments {
  id uuid [pk]

  enrollment_id uuid [ref: > enrollments.id]

  amount decimal(10,2)

  competence date

  due_date date

  payment_date date

  payment_method enum(
    'pix',
    'cash',
    'credit_card',
    'debit_card'
  )

  status enum(
    'pending',
    'paid',
    'overdue',
    'cancelled'
  )

  notes text

  created_at timestamp
  updated_at timestamp

  indexes {
    (enrollment_id, competence) [unique]
  }
}

Table notifications {
  id uuid [pk]

  user_id uuid [ref: > users.id]

  type enum(
    'registration',
    'payment_reminder',
    'payment_confirmed',
    'enrollment_approved',
    'password_reset',
    'general'
  )

  subject varchar

  body text

  status enum(
    'pending',
    'sent',
    'failed'
  )

  sent_at timestamp

  error_message text

  created_at timestamp
  updated_at timestamp
}